# os2mo-amqp-trigger-manager-terminator

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  AGENTS.md  Dockerfile  Justfile  README.md  docker-compose.yml  docker.env  pyproject.toml  queries.graphql  schema.graphql
.coverage-data/: .coverage
.gitlab/: dependabot.yml
.reuse/: dep5
autogenerated_graphql_client/: __init__.py  async_base_client.py  base_model.py  client.py  enums.py  exceptions.py  get_engagement_objects.py  get_managers.py  input_types.py  scalars.py  terminate_manager.py
manager_terminator/: api.py  config.py  depends.py  engagements.py  events.py  exceptions.py  helper_functions.py  log.py  main.py  managers.py  models.py  mutations_made_to_mo.py  process_events.py  queries_made_to_mo.py  utils.py
manager_terminator/autogenerated_graphql_client/: __init__.py  _testing__terminate_engagement.py  async_base_client.py  base_model.py  client.py  enums.py  me.py  (+12 more)
terminate_managers_init/: find_no_engagement_managers.py  init_manager_terminator.py  mutation_to_terminate_preexisting_empty_managers.py  query_to_find_empty_managers.py
terminate_managers_initialiser/: find_no_engagement_managers.py  initialise_manager_terminator.py  mutation_to_terminate_preexisting_empty_managers.py  query_to_find_empty_managers.py
tests/: conftest.py  test_another_temp.py  test_data.py  test_events.py  test_helpers.py  test_initialise_manager_terminator.py  test_initialiser_helpers.py  test_invalid_manager_periods.py  test_listener.py  test_models.py  test_queries_and_mutations.py  test_temp.py
(+8 files in other folders)
